--- a/freedv_low/acq_dt_hist.tex
+++ b/freedv_low/acq_dt_hist.tex
@@ -1,24 +1,24 @@
 % Title: gl2ps_renderer figure
 % Creator: GL2PS 1.4.2, (C) 1999-2020 C. Geuzaine
 % For: Octave
-% CreationDate: Thu Oct  5 12:08:12 2023
+% CreationDate: Thu Oct 19 11:08:38 2023
 \setlength{\unitlength}{1pt}
 \begin{picture}(0,0)
 \includegraphics[scale=1]{acq_dt_hist-inc}
 \end{picture}%
 \begin{picture}(300,250)(0,0)
 \fontsize{6}{0}\selectfont\put(39,22.8203){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{0}}}}
-\fontsize{6}{0}\selectfont\put(85.5,22.8203){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{0.1}}}}
-\fontsize{6}{0}\selectfont\put(132,22.8203){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{0.2}}}}
-\fontsize{6}{0}\selectfont\put(178.5,22.8203){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{0.3}}}}
-\fontsize{6}{0}\selectfont\put(225,22.8203){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{0.4}}}}
-\fontsize{6}{0}\selectfont\put(271.5,22.8203){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{0.5}}}}
+\fontsize{6}{0}\selectfont\put(97.125,22.8203){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{5}}}}
+\fontsize{6}{0}\selectfont\put(155.25,22.8203){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{10}}}}
+\fontsize{6}{0}\selectfont\put(213.375,22.8203){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{15}}}}
+\fontsize{6}{0}\selectfont\put(271.5,22.8203){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{20}}}}
 \fontsize{6}{0}\selectfont\put(35.8831,27.5){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{0}}}}
-\fontsize{6}{0}\selectfont\put(35.8831,68.25){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{2}}}}
-\fontsize{6}{0}\selectfont\put(35.8831,109){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{4}}}}
-\fontsize{6}{0}\selectfont\put(35.8831,149.75){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{6}}}}
-\fontsize{6}{0}\selectfont\put(35.8831,190.5){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{8}}}}
-\fontsize{6}{0}\selectfont\put(35.8831,231.25){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{10}}}}
+\fontsize{6}{0}\selectfont\put(35.8831,68.25){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{0.05}}}}
+\fontsize{6}{0}\selectfont\put(35.8831,109){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{0.1}}}}
+\fontsize{6}{0}\selectfont\put(35.8831,149.75){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{0.15}}}}
+\fontsize{6}{0}\selectfont\put(35.8831,190.5){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{0.2}}}}
+\fontsize{6}{0}\selectfont\put(35.8831,231.25){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{0.25}}}}
 \fontsize{5}{0}\selectfont\put(219.495,215.745){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{Histogram $|D_t|$}}}}
 \fontsize{5}{0}\selectfont\put(219.495,204.743){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{Rayleigh PDF}}}}
+\fontsize{5}{0}\selectfont\put(219.495,194.241){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{Dthresh}}}}
 \end{picture}
